# aptos-summits

./: README.md
art/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md
art/api/: Cargo.toml
art/api/src/: main.rs
art/artcore/: Cargo.toml
art/artcore/src/: api.rs  lib.rs
art/assets/: index.html
art/cli/: Cargo.toml
art/cli/src/: main.rs
art/core/: Cargo.toml
art/core/src/: lib.rs
art/deployment/: README.md
art/processor/: Cargo.toml  README.md
art/processor/configs/: example_local.yaml  example_mainnet.yaml  example_testnet.yaml
art/processor/src/: bevyapp.rs  blob_store.rs  config.rs  health_server.rs  main.rs  processor.rs  run.rs  storage.rs
art/scripts/: build_wasm.sh
art/web/: Cargo.toml
art/web/src/: lib.rs
art/weblib/: Cargo.toml
frontend/: README.md  index.html  package.json  pnpm-lock.yaml
frontend/src/: MyRoutes.tsx
frontend/src/api/: useTokens.ts
frontend/src/codegen/indexer/queries/: getTokens.graphql
frontend/src/context/: GlobalState.tsx
frontend/src/css/: bg.css  buttons.css
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/HomePage/: MintButton.tsx  ViewForm.tsx  index.tsx
frontend/src/pages/ViewPage/: ViewToken.tsx  index.tsx
frontend/src/summits/: summits.d.ts  summits.js  summits_bg.wasm.d.ts
frontend/src/types/: abis.ts  surf.ts
frontend/src/utils/: utils.ts
move/: .gitignore  Move.toml  README.md
move/scripts/: mint.py
move/sources/genr/: genr.move
move/sources/summits/: collection.move  token.move
scripts/: start_local_env.py
