[workspace.package]
authors = ["Daniel Porteous <daniel@dport.me>"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.74"
repository = "https://github.com/aptos-labs/aptos-summits"

[workspace]
resolver = "2"
members = [
    "cli",
    "core",
    "web",
]

[workspace.dependencies]
# Internal
cli = { path = "cli" }
core = { path = "core" }
web = { path = "web" }

# External
bevy = "0.12.1"
bevy_prototype_lyon = "0.10.0"
clap = { version = "4.4.18", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
sha2 = "0.10.8"
wasm-bindgen = { workspace = true }
web-sys = "0.3.67"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
