[workspace.package]
authors = ["Daniel Porteous <daniel@dport.me>"]
edition = "2021"
license = "Apache-2.0"
publish = false
rust-version = "1.74"
repository = "https://github.com/aptos-labs/aptos-summits"

[workspace]
resolver = "2"
members = [
    "api",
    "artcore",
    "cli",
    "processor",
    "web",
]

[workspace.dependencies]
# Internal
api = { path = "api" }
artcore = { path = "artcore" }
cli = { path = "cli" }
processor = { path = "processor" }
web = { path = "web" }

# External
aptos-processor-sdk = { git = "https://github.com/aptos-labs/aptos-indexer-processors", branch = "processor-sdk-head" }
axum = "0.7.4"
bevy = { version = "0.12.1", features = ["bevy_core_pipeline", "bevy_render", "bevy_scene", "bevy_winit", "png", "x11", "multi-threaded", "wayland", "webgl2"], default-features = false }
bevy_prototype_lyon = "0.10.0"
clap = { version = "4.4.18", features = ["derive"] }
crossbeam-channel = "0.5.11"
image = { version = "0.24.8", features = ["png"], default-features = false }
rand = { version = "0.8.5", features = ["small_rng"] }
sha2 = "0.10.8"
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.5.1", features = ["trace"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["json"] }
wasm-bindgen = "0.2.90"
web-sys = "0.3.67"

[profile.release]
lto = true
codegen-units = 1
opt-level = 'z'
