[package]
name = "core"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# External
bevy = { workspace = true }
bevy_prototype_lyon = { workspace = true }
clap = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }

