[package]
name = "processor"
description = "todo"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
# Internal
artcore = { workspace = true, features = ["api"] }

# External
anyhow = "1.0.79"
axum = { workspace = true }
aptos-processor-sdk = { workspace = true }
clap = { workspace = true }
crossbeam-channel = { workspace = true }
google-cloud-storage = { workspace = true }
serde = { workspace = true }
serde_json = "1.0.111"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
figment = { version = "0.10.14", features = ["env", "yaml"] }
futures = "0.3.30"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
async-trait = "0.1.77"
hex = "0.4.3"
