[package]
name = "aptosfxhash"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
bevy = "0.12.1"
nannou = "0.19.0"
wasm-bindgen = "0.2.90"

[lib]
crate-type = ["cdylib"]

[profile.onchain]
inherits = "release"
debug = false
opt-level = "z"
lto = "thin"
# Building fails if this is true, though I need the binary to be as small as possible.
# Though perhaps storing the binary on chain is a pipe dream and I should just store it
# on Arweave or just off chain fr now in an API.
strip = false
codegen-units = 1
